# melody

./: Cargo.toml  Readme.md
.github/workflows/: release.yml
src/: app.rs  component.rs  dirs.rs  event.rs  main.rs  tui.rs
src/data/: config.rs  mod.rs  playlists.rs
src/handlers/: mod.rs  music.rs
src/loaders/: mod.rs  player.rs
src/tabs/: log.rs  mod.rs
src/tabs/manager/: mod.rs  sections.rs  state.rs
src/tabs/player/: audio.rs  library.rs  mod.rs  playlist.rs  sections.rs  state.rs
src/tabs/player/audio/: handler.rs  mod.rs
src/utils/: mod.rs
src/view/: mod.rs  ui.rs
src/view/controllers/: list.rs  mod.rs  table.rs
src/view/widgets/: input.rs  mod.rs
src/view/widgets/list/: mod.rs  select_list.rs
src/view/widgets/state/: input.rs  mod.rs
