[package]
name = "melody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
rodio = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
lofty = "0.15.0"
